# goatherd

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-llvm.sh  initboost.sh  shepherd.cbp
alpine/: APKBUILD
examples/: composer.json  example-tcp.json  example-uds.json
examples/src/: app-tcp.php  app-uds.php  change.me
src/: ConfigLoader.cpp  ConfigLoader.h  DirectoryMonitor.h  LoadBalancer.cpp  LoadBalancer.h  Session.cpp  Session.h  WatchDog.cpp  WatchDog.h  Worker.cpp  Worker.h  main.cpp
src/Acceptor/: Acceptor.h  TcpAcceptor.cpp  TcpAcceptor.h  UdsAcceptor.cpp  UdsAcceptor.h
src/Config/: ConfigLoader.h  SocketParser.h  WorkerConfig.cpp  WorkerConfig.h
